# strategic-game-app

./: .gitignore  README.md
backend/: CMakeLists.txt
backend/include/: ai.h  api.h  board.h  game.h  types.h
backend/src/: ai.cpp  api.cpp  board.cpp  game.cpp  main.cpp
frontend/strategic_game/: README.md  pubspec.yaml
frontend/strategic_game/lib/: main.dart
frontend/strategic_game/lib/models/: game_state.dart  position.dart
frontend/strategic_game/lib/screens/: game_screen.dart
frontend/strategic_game/lib/services/: game_ffi.dart  game_service.dart
frontend/strategic_game/lib/widgets/: board_widget.dart  cell_widget.dart
frontend/strategic_game/test/: widget_test.dart
frontend/strategic_game/windows/: CMakeLists.txt
frontend/strategic_game/windows/runner/: Runner.rc  main.cpp
